修改了自定义列的中文显示，phoenix存储添加gear档位存储。

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -24,49 +24,49 @@
 				 	</button>
 					<ul class="dropdown-menu tableMenu showHideMenu" role="menu">
 				        <li><label><input value="csNumber" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机号</label></li>
-				        <li><label><input value="csAccess" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >授权系统</label></li>
+				        <li><label><input value="csAccess" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >接入商</label></li>
 				        <li><label><input value="addTimeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
-				        <li><label><input value="currentTimeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >下位机时间</label></li>
+				        <li><label><input value="currentTimeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >报文时间</label></li>
 				        <li><label><input value="rentFlg" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >租赁状态</label></li>
 				        <li><label><input value="warnCode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >报警代码</label></li>
 				        <li><label><input value="rfid" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >RFID卡号</label></li>
 				        <li><label><input value="userRfid" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >用户RFID</label></li>
-				        <li><label><input value="obdMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >OBD里程</label></li>
+				        <li><label><input value="obdMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >累计里程</label></li>
 				        <li><label><input value="engineTempe" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >发动机温度</label></li>
-				        <li><label><input value="totalMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >总里程</label></li>
+				        <li><label><input value="totalMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >订单总里程</label></li>
 				        <li><label><input value="speed" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车速</label></li>
 				        <li><label><input value="motorSpeed" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >转速</label></li>
 				        <li><label><input value="oilCost" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >燃油量</label></li>
-				        <li><label><input value="powerReserve" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >蓄电量</label></li>
-				        <li><label><input value="evBattery" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >动力电池电量</label></li>
+				        <li><label><input value="powerReserve" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >小电池电量</label></li>
+				        <li><label><input value="evBattery" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >SOC</label></li>
 				        <li><label><input value="chargingStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >充电状态</label></li>
-				        <li><label><input value="fuelMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >油里程</label></li>
-				        <li><label><input value="elecMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >电量程</label></li>
+				        <li><label><input value="fuelMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >订单油里程</label></li>
+				        <li><label><input value="elecMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >订单电量程</label></li>
 				        <li><label><input value="endurMiles" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >续航里程</label></li>
 				        <li><label><input value="tempe" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >温度</label></li>
 				        <li><label><input value="gpsNum" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >卫星数量</label></li>
 				        <li><label><input value="gpsStrength" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >卫星信号强度</label></li>
 				        <li><label><input value="gpsValidText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >gps有效性</label></li>
-				        <li><label><input value="netStrength" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >网络信号强度</label></li>
+				        <li><label><input value="netStrength" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >CSQ</label></li>
 				        <li><label><input value="longitude" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >经度</label></li>
 				        <li><label><input value="latitude" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >纬度</label></li>
-				        <li><label><input value="directionAngle" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >方向角度</label></li>
+				        <li><label><input value="directionAngle" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >方向角</label></li>
 				        <li><label><input value="circularModeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >循环模式</label></li>
 				        <li><label><input value="ptcStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >PTC启停</label></li>
-				        <li><label><input value="compreStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >压缩机状态</label></li>
+				        <li><label><input value="compreStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >压缩机</label></li>
 				        <li><label><input value="fanModeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >档风量</label></li>
-				        <li><label><input value="savingModeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >省电模式</label></li>
+				        <li><label><input value="savingModeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >功耗模式</label></li>
 				        <li><label><input value="doorStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车门状态</label></li>
-				        <li><label><input value="engineStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >发动机</label></li>
+				        <li><label><input value="engineStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >发动机状态</label></li>
 				        <li><label><input value="keyStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >钥匙状态</label></li>
 				        <li><label><input value="gearText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >档位</label></li>
 
-						<li><label><input value="lightStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >灯状态</label></li>
-				        <li><label><input value="lockStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >锁状态</label></li>
+						<li><label><input value="lightStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车灯状态</label></li>
+				        <li><label><input value="lockStatus" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车锁状态</label></li>
 				        <li><label><input value="netTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >网络类型</label></li>
-				        <li><label><input value="baseLac" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >基站LAC</label></li>
-				        <li><label><input value="baseCi" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >基站CI</label></li>
-				        <li><label><input value="curOrder" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >当前订单</label></li>
+				        <li><label><input value="baseLac" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >LAC</label></li>
+				        <li><label><input value="baseCi" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >CI</label></li>
+				        <li><label><input value="curOrder" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >订单号</label></li>
 					</ul>
 				</div>
 			</div>
