--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
@@ -15,9 +15,9 @@
 <dl cond="currentTime" >
 				<dt>下位机时间</dt>
 				<dd class="timergroup" >
-					<input  name="currentTimeStart"  placeholder="开始日期" class="form-control timegroupinput" onclick="laydate({format: 'YYYY-MM-DD hh:mm:ss'})">
+					<input  name="currentTimeStart"  placeholder="开始日期" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
                     <label class="timegrouplabel">-</label>
-                    <input  name="currentTimeEnd" placeholder="结束日期" class="form-control timegroupinput" onclick="laydate({format: 'YYYY-MM-DD hh:mm:ss'})">
+                    <input  name="currentTimeEnd" placeholder="结束日期" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
 				</dd>
 			</dl>
 
