--- a/vc-web/vc-web-front/src/main/resources/static/resetPassword.html
+++ b/vc-web/vc-web-front/src/main/resources/static/resetPassword.html
@@ -110,7 +110,7 @@ $.extend(vote , {
                 }else{
                     $.ajax({
                         type:'post',
-                        url: authUrl + '/oauth/editPassword',
+                        url: getServUrl('/oauth/editPassword'),
                         async: true,
                         dataType:'json',
                         contentType:'application/json',
