--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -37,9 +37,6 @@
 				</div>
 				<div class="sidebar-collapse">
 					<ul class="nav leftnav" id="side-menu">
-						<div class="img-box">
-							<img src="/img/Page1.png">
-						</div>
 						<!-- 加载菜单 -->
 					</ul>
 				</div>
@@ -56,9 +53,8 @@
 								</ul>
 							</div>
 							<div class="username">
-								<span class="account">长安出行账号</span>
+								<span class="account">您好 ,</span>
 								<ul class="account-msg hide">
-									<li class = "userInfo">消息</li>
 									<li class="reset-password"><a href="/resetPassword.html">修改密码</a></li>
 									<li data-toggle="modal" data-target="#myModal6">退出</li>
 								</ul>
@@ -123,7 +119,7 @@
 
 		<script src="js/jquery.min.js?v=2.1.4"></script>
 		<script src="js/bootstrap.min.js?v=3.3.5"></script>
-		<script src="js/index.js"></script>
+		<script src="js/index.js?v=1510164124233"></script>
 		<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
 		<script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 		<script src="js/plugins/layer/layer.min.js"></script>
@@ -132,7 +128,6 @@
 		<script src="js/plugins/pace/pace.min.js"></script>
 		<script src="js/mustache.js"></script>
 		<script src="js/authorized.js"></script>
-		<script type="text/javascript"></script>
 
 	</body>
 
