--- a/vc-web/vc-web-front/src/main/resources/public/monitor/map/history.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/map/history.html
@@ -204,6 +204,8 @@
 
       $('<div id="loadingTip">加载数据，请稍候...</div>').appendTo(document.body);
 
+      params.page = 1;
+
       loadData();
 
       expandPath();
