--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index.html
@@ -28,7 +28,7 @@
 		<script src="/js/plugins/sweetalert/sweetalert.min.js"></script>
 		<script src="/js/contabs.min.js"></script>
 		<script src="/js/layer/layer.js"></script>
-		<script src="/js/tpui-core.js"></script>
+		<script src="/js/tpui-core.js?v=11111212"></script>
 		<script src="/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
 		<script src="/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
 		
