--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -86,6 +86,7 @@
   var $csNumber = $("input[name='csNumberEquals']");
   var $startTime = $("input[name='currentTimeStart']");
   var $endTime = $("input[name='currentTimeEnd']");
+  var currPage=1;
 
   function checkParams() {
     if ($csNumber.val() === '' || typeof($csNumber.val()) === 'undefined') {
@@ -133,8 +134,10 @@
       if (!checkParams()) {
         return;
       }
-			grid.reloadData({where:getFormData(this.getQueryForm())});
-      		ajaxRequest(getServUrl("/monitor/historyState/report"), "GET",getFormData(this.getQueryForm()));
+      console.log(option.url)
+      console.log(JSON.stringify(option))
+//      $.get(getServUrl("/monitor/historyState/report"), $.extend(getFormData(this.getQueryForm()),{rows:option.limit,page:currPage}) );
+      window.open(getServUrl("/monitor/historyState/report")+"?"+jsonToUri($.extend(getFormData(this.getQueryForm()),{rows:option.limit,page:currPage})));
 		},
 
 		batchDel:function(){
@@ -237,7 +240,10 @@
 			  height:getTableHeight(),
 			  url:getServUrl("/monitor/historyState/list"),
 			  cols:  [clms],
-			  done: function(res, curr, count){},
+			  done: function(res, curr, count){
+			    		console.log(curr);
+          		currPage = curr;
+						},
       	  	  response: {
 	      		  statusName: "code",
 	  		      statusCode: 0,
@@ -248,7 +254,7 @@
 	      	  request:{limitName: "rows"},
 	      	  where:{
 	      			sidx:"currentTime",
-					sord:"desc"
+							sord:"desc"
 	      	  }
 	};
 
@@ -279,6 +285,7 @@
 	$(window).resize(function(){
 		option["height"] = getTableHeight();
 		$(".layui-table-view").remove();
+    option.where = getFormData(operate.getQueryForm());
 		grid.render(option);
 	});
 
