--- a/vc-web/vc-web-front/src/main/resources/static/login_v2.html
+++ b/vc-web/vc-web-front/src/main/resources/static/login_v2.html
@@ -104,13 +104,13 @@
         success: function (data) {
           if (data.success) {
             var datas = data.data;
-            if (referer === "") {
+//            if (referer === "") {
               window.location.href = authUrl + "/index.html?access_token=" + datas.access_token
                   + "&userId=" + datas.user_id+ "&userName="+username;
-            } else {
-              window.location.href = referer + "?access_token=" + datas.access_token + "&userId="
-                  + datas.user_id + "&userName="+username;
-            }
+//            } else {
+//              window.location.href = referer + "?access_token=" + datas.access_token + "&userId="
+//                  + datas.user_id + "&userName="+username;
+//            }
           } else {
             layer.msg(data.message, {icon: 7, time: 3000});
           }
