--- a/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
@@ -78,6 +78,7 @@
 
 <script src="/layui/layui.all.js?t=1510164124207"></script>
 <script type="text/javascript">
+    var currPage=1;
 
 	var operate = {
 		getGrid:function(){
@@ -92,6 +93,11 @@
 		query:function(){
 			grid.reloadData({where:getFormData(this.getQueryForm())});
 		},
+        exportData:function(){
+            console.log("exportData")
+
+            window.open(getServUrl("/admin/machine/report")+"?"+jsonToUri($.extend(getFormData(this.getQueryForm()),{rows:option.limit,page:currPage})));
+        },
 		add:function(){
 			var o = this;
 			showTopWin({
@@ -213,7 +219,9 @@
 			  height:getTableHeight(),
 			  url:getServUrl("/admin/machine/list"),
 			  cols:  [clms],
-			  done: function(res, curr, count){},
+			  done: function(res, curr, count){
+                  currPage = curr;
+			  },
       	  	  response: {
 	      		  statusName: "code",
 	  		      statusCode: 0,
@@ -256,6 +264,7 @@
 	$(window).resize(function(){
 		option["height"] = getTableHeight();
 		$(".layui-table-view").remove();
+        option.where = getFormData(operate.getQueryForm());
 		grid.render(option);
 	});
 
