--- a/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
@@ -40,7 +40,7 @@
 
 <script src="/layui/layui.all.js?t=1510164124207"></script>
 <script type="text/javascript">
-
+    var currPage=1;
 	var operate = {
 		getGrid:function(){
 			return grid;
@@ -54,8 +54,12 @@
 		query:function(){
 			grid.reloadData({where:getFormData(this.getQueryForm())});
 		},
-		
-		
+
+        exportData:function(){
+            console.log("exportData")
+
+            window.open(getServUrl("/monitor/statistics/report")+"?"+jsonToUri($.extend(getFormData(this.getQueryForm()),{rows:option.limit,page:currPage})));
+        },
 		
 		batchDel:function(){
 			var o = this;
@@ -120,7 +124,9 @@
 			  height:getTableHeight(),
 			  url:getServUrl("/monitor/statistics/list"),
 			  cols:  [clms],
-			  done: function(res, curr, count){},
+			  done: function(res, curr, count){
+                  currPage = curr;
+			  },
       	  	  response: {
 	      		  statusName: "code",
 	  		      statusCode: 0,
@@ -163,6 +169,7 @@
 	$(window).resize(function(){
 		option["height"] = getTableHeight();
 		$(".layui-table-view").remove();
+        option.where = getFormData(operate.getQueryForm());
 		grid.render(option);
 	});
 
