--- a/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_query.html
@@ -6,12 +6,12 @@
 <body>
 	<form class="form-horizontal queryform">
 		<div class="form-group">
-<dl cond="id" style="display:none;">
+<!--<dl cond="id" style="display:none;">
 				<dt>编号</dt>
 				<dd  >
 					<input  name="idEquals" placeholder="请输入数字" class="form-control" >
 				</dd>
-			</dl>
+			</dl>-->
 <dl cond="csVin" >
 				<dt>车辆VIN码</dt>
 				<dd  >
@@ -83,12 +83,12 @@
                     </select>
 				</dd>
 			</dl>
-<dl cond="createTime" style="display:none;">
+<!--<dl cond="createTime" style="display:none;">
 				<dt>此行创建时间</dt>
 				<dd  >
 					<input  name="createTimeEquals" class="form-control layer-date laydate-icon" placeholder="" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
 				</dd>
-			</dl>
+			</dl>-->
 <dl cond="modifyDate" style="display:none;">
 				<dt>此行更新时间</dt>
 				<dd  >
